# mriqcdb-aggregator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
deploy/nginx/: default.conf
deploy/systemd/: mriqc-aggregator.service
docs/: data-migration.md  duplicate-handling.md  erd.md  ingestion.md  operations.md  schema-design.md
frontend/: .gitignore  package.json  playwright.config.ts  playwright.global-setup.ts  playwright.global-teardown.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: measures-sidebar.tsx  metric-histogram-card.tsx  modality-icon.tsx  modality-switcher.tsx  qc-measures-sidebar.tsx  report-upload-panel.tsx  search-form.tsx  view-switcher.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: api.ts  metric-catalog.ts
frontend/tests/: dashboard.spec.ts
mriqc_aggregator/: __init__.py  app.py  cli.py  database.py  loading.py  metrics.py  models.py  parsing.py  profiling.py  storage.py
scripts/: init_db.py  load_dump.py  load_raw_run.py  run_tests.sh  seed_dashboard_fixture.py  start_api.py
terraform/loader-host/: README.md  example.s3.tfbackend  main.tf  outputs.tf  variables.tf
terraform/state-backend/: README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api.py  test_cli.py  test_database.py  test_loading.py  test_models.py  test_parsing.py  test_profiling.py  test_start_api.py  test_storage.py
(+7 files in other folders)
