[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mriqc-aggregator"
version = "0.1.0"
description = "Representative raw data pulls from the MRIQC Web API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "gunicorn>=25,<26",
  "httpx>=0.27,<0.29",
  "psycopg[binary]>=3.2,<3.3",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn>=0.30,<0.31",
]

[project.scripts]
mriqc-aggregator = "mriqc_aggregator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mriqc_aggregator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
